--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,9 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
     "json-server": "^1.0.0-beta.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4"
   }
 }
