--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,8 +17,10 @@
     "express-async-handler": "^1.2.0",
     "json-server": "^1.0.0-beta.1",
     "jsonwebtoken": "^9.0.2",
+    "mapbox-gl": "^3.4.0",
     "mongoose": "^8.4.3",
     "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "react-map-gl": "^7.1.7"
   }
 }
